[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "psyquartz"
description = "A high-performance clock and sleep library for Python, written in Rust."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["clock", "timing", "sleep", "rust"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/berkgercek/psyquartz/"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.uv]
cache-keys = [{file = "**/*.rs"}, {file = "Cargo.toml"}, {file = "pyproject.toml"}]
default-groups = 'all'

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
